Add working dense text embeddings integration with default endpoint. Some tests WIP